--- a/_posts/2017-02-17-test.md
+++ b/_posts/2017-02-17-test.md
@@ -3,11 +3,24 @@ layout: default
 title: hello world!
 ---
 
-# 你好，世界
+#你好，世界
 
 这是测试文章。
 
+```js
+$(document).ready(function(){	
+    a = new ww_slide("sreen","pages","6000","mouseover","prev","next");
+    
+    $(".poster").hover(function(){
+        $(".prev_next_hide").fadeIn("slow");
+    },function(){
+        $(".prev_next_hide").fadeOut("slow");
+    });
+    
 
+
+})
+```
 ------------
 
 Github Pages 官方介绍 
