--- a/_posts/2017-02-17-test.md
+++ b/_posts/2017-02-17-test.md
@@ -1,11 +1,12 @@
 ---
-layout: default
-title: hello world!
+layout: post
+title:  "你好，世界！"
+author: ww
+categories: JavaScript
 ---
 
-# 你好，世界
 
-这是测试文章。
+这是第一篇测试文章。
 
 ```js
 $(document).ready(function(){	
@@ -25,7 +26,7 @@ $(document).ready(function(){
 
 
 
-------------
+## 教程
 
 Github Pages 官方介绍 
 https://pages.github.com/
@@ -36,7 +37,7 @@ http://www.ruanyifeng.com/blog/2012/08/blogging_with_jekyll.html
 beiyuu的教程
 http://beiyuu.com/github-pages
 
-------------
+## 其他静态生成器
 
 Hexo官网
 https://hexo.io/zh-cn/
@@ -50,7 +51,7 @@ http://ibruce.info/2013/11/22/hexo-your-blog/
 Hugo官网
 http://gohugo.io/overview/introduction/
 
-------------
+## 其他
 
 在线的MakeDown编辑器
 https://maxiang.io
