--- a/_posts/2017-02-17-test.md
+++ b/_posts/2017-02-17-test.md
@@ -1,5 +1,5 @@
 ---
-layout: item
+layout: post
 title:  "你好，世界！"
 author: ww
 categories: php
@@ -58,3 +58,10 @@ https://maxiang.io
 
 还没看完的文章
 http://www.jianshu.com/p/380290deb8f0
+
+-----------
+
+分类分页
+
+http://bamzc.top/2016/11/02/jekyll-paginate#1920
+http://www.marran.com/tech/category-pagination-in-jekyll/
