--- a/_posts/2017-02-17-test.md
+++ b/_posts/2017-02-17-test.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title:  "你好，世界！"
-author: ww
+author: weiwei
 categories: php
 ---
 
@@ -65,3 +65,5 @@ http://www.jianshu.com/p/380290deb8f0
 
 http://bamzc.top/2016/11/02/jekyll-paginate#1920
 http://www.marran.com/tech/category-pagination-in-jekyll/
+
+[TOC]
