--- a/_posts/2017-02-17-test.md
+++ b/_posts/2017-02-17-test.md
@@ -28,8 +28,8 @@ $(document).ready(function(){
 
 ## 教程
 
-Github Pages 官方介绍 
-https://pages.github.com/
+>Github Pages 官方介绍 
+>https://pages.github.com/
 
 阮一峰的教程
 http://www.ruanyifeng.com/blog/2012/08/blogging_with_jekyll.html
@@ -53,10 +53,10 @@ http://gohugo.io/overview/introduction/
 
 ## 其他
 
-在线的MakeDown编辑器
+###在线的MakeDown编辑器
 https://maxiang.io
 
-还没看完的文章
+###还没看完的文章
 http://www.jianshu.com/p/380290deb8f0
 
 -----------
@@ -66,4 +66,4 @@ http://www.jianshu.com/p/380290deb8f0
 http://bamzc.top/2016/11/02/jekyll-paginate#1920
 http://www.marran.com/tech/category-pagination-in-jekyll/
 
-[TOC]
+{:toc}
