--- a/_posts/2017-02-17-test.md
+++ b/_posts/2017-02-17-test.md
@@ -53,10 +53,10 @@ http://gohugo.io/overview/introduction/
 
 ## 其他
 
-###在线的MakeDown编辑器
+### 在线的MakeDown编辑器
 https://maxiang.io
 
-###还没看完的文章
+### 还没看完的文章
 http://www.jianshu.com/p/380290deb8f0
 
 -----------
@@ -66,4 +66,5 @@ http://www.jianshu.com/p/380290deb8f0
 http://bamzc.top/2016/11/02/jekyll-paginate#1920
 http://www.marran.com/tech/category-pagination-in-jekyll/
 
+* content
 {:toc}
