--- a/_posts/2017-02-17-test.md
+++ b/_posts/2017-02-17-test.md
@@ -66,5 +66,18 @@ http://www.jianshu.com/p/380290deb8f0
 http://bamzc.top/2016/11/02/jekyll-paginate#1920
 http://www.marran.com/tech/category-pagination-in-jekyll/
 
+## 记录网址
+
+Liquid 语言基础
+http://www.jianshu.com/p/b11bc7b3306c
+
+域名绑定
+https://help.github.com/articles/setting-up-an-apex-domain/
+
+分页
+https://github.com/mzlogin/jekyll-theme-solid/blob/gh-pages/_includes/pagination.html
+
+
+
 * content
 {:toc}
