--- a/_posts/2017-02-17-test.md
+++ b/_posts/2017-02-17-test.md
@@ -47,8 +47,14 @@ https://zespia.tw/blog/2012/10/11/hexo-debut/
 Hexo教程
 http://ibruce.info/2013/11/22/hexo-your-blog/
 
+---
+
 Hugo官网
 http://gohugo.io/overview/introduction/
+
+hugo教程
+http://blog.coderzh.com/2015/08/29/hugo/
+
 
 ## 其他
 
