--- a/_posts/2017-03-10-web_fonts.md
+++ b/_posts/2017-03-10-web_fonts.md
@@ -42,17 +42,16 @@ body { font-family: Arial, "Microsoft YaHei" }
 
 ### Web 安全字体
 
- 通过对比 [Windows 默认字体列表][1] 和 [OS X 默认字体列表][2]，以及这些字体 [在各系统中版本占有率][3]，基本接近绝对安全的，有以下英文字体：
+ 通过对比 [Windows 默认字体列表][1] 和 [OS X 默认字体列表][2]，以及这些字体 [在各系统中版本占有率][3]，接近绝对安全的（字体名称和样子一致占有率95%+），有以下英文字体：
 
 | 字体名称 | 特点 | 示例 |
 | - | - | - |
-| Arial | 无衬线，大写i与小写L难以区分 | Weiwei-iIlLoO0123 |
-| Tahoma | 无衬线，可代替Arial | |
-| Verdana | 无衬线，间距稍大 | |
-| Trebuchet MS | 无衬线，偏粗 | |
-| Georgia | 衬线，风格浑厚，数字尺寸不一 | |
-| Times New Roman | 衬线，风格平滑，数字尺寸一致 | |
-| Courier New | 等宽体，适合代码 | |
+| Arial | 无衬线，大写i与小写L难以区分 | <span style='font-size:20px;font-family:Arial'>Weiwei - iIlLoO01</span> |
+| Tahoma | 无衬线，可代替Arial | <span style='font-size:20px;font-family:Tahoma'>Weiwei - iIlLoO01</span> |
+| Verdana | 无衬线，比 Tahoma 间距稍大 | <span style='font-size:20px;font-family:Verdana'>Weiwei - iIlLoO01</span> |
+| Georgia | 衬线，风格浑厚，数字尺寸不一 | <span style='font-size:20px;font-family:Georgia'>Weiwei - iIlLoO01</span> |
+| Times New Roman | 衬线，风格平滑，数字尺寸一致 | <span style='font-size:20px;font-family:"Times New Roman"'>Weiwei - iIlLoO01</span> |
+| Courier New | 等宽体，适合代码 | <span style='font-size:20px;font-family:"Courier New"'>Weiwei-iIlLoO01</span> |
 
 
 对于中文字体，[最佳实践][4]是用 “相似字体” 互相代替：
