--- a/_posts/2017-03-10-web_fonts.md
+++ b/_posts/2017-03-10-web_fonts.md
@@ -141,9 +141,9 @@ body { font-family: "自定义字体名"; }
 
 相关云服务（国外通常个人免费，国内收费居多），一般有两种方式的 API ：
 
-- 一种是通过前端方式，往页面中添加一段 JS 代码，由 JS 自行扫描页面 DOM ，把文字汇总后传回自己的云服务器，再由于云服务器动态生成字体，返回字体的 URL。
+一种是通过前端方式，往页面中添加一段 JS 代码，由 JS 自行扫描页面 DOM ，把文字汇总后传回自己的云服务器，再由于云服务器动态生成字体，返回字体的 URL。
 
-- 另一种是通过服务端语言，用户在服务端自己整理需生成的文字，再发送给云 API ，并拿到字体的 URL ，这种方式需要用户具备一定开发能力。
+另一种是通过服务端语言，用户在服务端自己整理需生成的文字，再发送给云 API ，并拿到字体的 URL ，这种方式需要用户具备一定开发能力。
 
 国外主流的有，Steve Lee 的项目  [Fonts.com][14]，Adobe 的 [TypeKit][15]，还有 [Google Fonts][16]  等等。
 
@@ -151,7 +151,7 @@ body { font-family: "自定义字体名"; }
 
 一些传统字体厂商也纷纷推出，[方正云字库][20]，[汉仪云字库][21]，[文鼎 iFontCloud][22]，[华康 DigiType][23] 等。
 
-其中华康的 DigiType 技术，把中文字体拆成笔画来存储，让字体文件更小，基本可以和英文字体媲美了。
+其中华康的 DigiType 技术，**把中文字体拆成笔画来存储**，让字体文件更小，基本可以和英文字体媲美了。
 
 ### Web-Fonts 自建服务
 
@@ -183,7 +183,7 @@ body { font-family: "自定义字体名"; }
 
 自己制作 iconfont 图标，思路就是用 Illustrator 之类矢量绘图软件绘制，保存成 SVG 格式，再通过字体工具转成字体。
 
-SVG 转字体的工具，上文提到过，但在线的 [fontsquirrel][8] 只能单纯实现格式转换，总不能一个字体文件里就一个字吧，如何在一个字体文件中包含任意数量文字呢，上文提到的专业字体编辑软件自然可以，只是大材小用且略麻烦，好在也有在线工具可以做到，如：[fontello][43] 和 [icomoon][44]，还有阿里的图标综合站 [iconfont][45] 。
+SVG 转字体的工具，上文提到过在线工具 fontsquirrel ，但只能单纯实现格式转换，总不能一个字体文件里就一个字吧，如何在一个字体文件中包含任意数量文字呢，上文提到的专业字体编辑软件自然可以，只是大材小用且略麻烦，好在也有在线工具可以做到，如：[fontello][43] 和 [icomoon][44]，还有阿里的图标综合站 [iconfont][45] 。
 
 
 - 用别人做好的
