--- a/_posts/2017-03-10-web_fonts.md
+++ b/_posts/2017-03-10-web_fonts.md
@@ -8,7 +8,7 @@ cc: 1
 
 ![](http://imglf1.nosdn.127.net/img/MzVqS0VIeGlFdmxTbXFmN3ZPWm9JbU83UWhWRE9KYzBZTFFsNjFOYldaMmZ4NVB3QUFLSjFRPT0.png)
 
-做 Web 前端几乎天天在使用字体，却一直用的稀里糊涂的，最近把知识点整理了一下。
+做 Web 前端几乎天天在使用字体，把知识点整理了一下。
 
 
 
@@ -38,7 +38,7 @@ body { font-family: Arial, "Microsoft YaHei" }
 
 第4条，就是上例问题的完美解决方案，当然也可简单解决：2个英文名都写。
 
-第5条，不同的系统差异、同系统之间的版本差异、一些软件自行安装字体导致系统字体列表杂乱，难以辨识哪些字体安全可用，于是引入下面话题。
+第5条，操作系统差异、同系统间的版本差异、软件自行安装字体，导致系统字体列表杂乱，如何辨识哪些字体安全呢，于是考证了一番：
 
 ### Web 安全字体
 
@@ -84,26 +84,24 @@ body { font-family: "自定义字体名"; }
 
 ### 常见的字体格式
 
-三十年前，Adobe 的 PostScript Type1 与 Apple 的  TrueType 字体技术大战，结果微软跑出来先连横后合纵，最终合并为 OpenType 一统江湖。
+30年前，Adobe 的 PostScript Type1 与 Apple 的  TrueType 字体技术大战，结果微软跑出来连横合纵，最终合为 OpenType 一统江湖。
 
-二十年前，进入 web 时代，为提供嵌入式方案，微软推出了压缩版的 Embedded-OpenType。W3C 则在发展矢量图形标准 SVG（Scalable Vector Graphics）中支持了矢量字体。
+20年前，为提供嵌入式方案，微软推出了压缩版的 Embedded-OpenType。W3C 则在发展矢量图形标准 SVG 中支持了矢量字体。
 
-十年前，Mozilla 基于 OpenType 推出了另一种压缩字体格式 WOFF（Web Open Font Format） 并联合微软等提交给了 W3C 标准化。
-
-于是，在 Web 中的常见字体格式有 4 种：
+10年前，Mozilla 基于 OpenType 推出了另一种压缩字体格式 WOFF（Web Open Font Format） 并联合微软等提交给了 W3C 标准化。
 
 | 格式名 | 扩展名 | 浏览器支持情况（[详见这里][7]） |
 |--|--|--|
 | OpenType | .ttf / .otf | IE 9+，FireFox 3.5+，Chrome 4+ |
-| Embedded-OpenType | .eot | IE 6+ |
+| Embedded-OpenType | .eot | IE 6~8 |
 | SVG | .svg | IE 9+，FireFox 2+，Chrome 4+ |
 | WOFF | .woff | IE 9+，FireFox 3.6+，Chrome 5+ |
 
-以上，woff 体积最小，除 IE8 外主流浏览器全都支持，因此一般只需使用 woff 格式即可，处女座可以考虑联合 eot、svg、ttf 一起使用。
+于是在 Web 中常见的4种字体格式中，woff 体积最小除 IE8 外浏览器全都支持，因此一般只需使用 woff 格式即可，处女座可以考虑联合 eot、svg、ttf 一起使用。
 
 ### 字体格式之间的转换
 
-实现字体格式转换的软件有很多（如：[gulp][36] 以及下文提到的其他工具），最简单的是通过一个在线工具 [fontsquirrel][8] ，操作步骤见下图：
+实现字体格式转换的软件有很多（如：[gulp][36] 及下文提到的其他工具），最简单的是通过一个在线工具 [fontsquirrel.com][8] ，操作步骤见下图：
 
 ![](http://imglf1.nosdn.127.net/img/MzVqS0VIeGlFdmxTbXFmN3ZPWm9Jcyt2ZWZUckI3RnJjbm5rd2V1VGM2N3VHTHV6T0hiYnNnPT0.png)
 
@@ -130,24 +128,20 @@ body { font-family: "自定义字体名"; }
 
 加载外部字体虽好，可中文字体却成了问题，英文字体由于只有 26 个字母，一个 TTF 字体文件最多也只有几百 KB ，而一个中文字体文件最少也有几 MB，通过网络加载显然不现实。
 
-于是在 2010 年，一个叫 [Steve Lee][11]  的人想出了了一个称为 [Dynamic subsetting][12] 的解决方案，俗称“动态子集化”技术（[专利连接][13]）。
+于是在 2010 年，一个叫 [Steve Lee][11]  的人想出了了一个称为 [Dynamic subsetting][13] 的解决方案，就是“[动态子集化][12]”技术，俗称 Web-Fonts 技术。
 
-简单点说，这个方案就是提前整理出一个页面中所有用到所有汉字，然后生成一个只包含这些汉字的字体文件，然后再通过 CSS 加载，这个叫“子集化”，动态子集化，就是以上全部动态实现。
-
-动态子集化这个词汇太专业，由于一般配合的 WOFF 格式原本就是 Web Open Font Format，所以一般概述为 Web-Fonts 技术。
+简单点说，就是提前整理出一个页面中所有用到所有汉字，然后生成一个只包含这些汉字的字体文件，然后再通过 CSS 加载，这个叫“子集化”，动态子集化就是以上全部动态实现。
 
 
 ### Web-Fonts 云服务
 
-相关云服务（国外通常个人免费，国内收费居多），一般有两种方式的 API ：
+相关云服务，一般有两种方式的 API ：
 
-一种是通过前端方式，往页面中添加一段 JS 代码，由 JS 自行扫描页面 DOM ，把文字汇总后传回自己的云服务器，再由于云服务器动态生成字体，返回字体的 URL。
-
-另一种是通过服务端语言，用户在服务端自己整理需生成的文字，再发送给云 API ，并拿到字体的 URL ，这种方式需要用户具备一定开发能力。
+一种是通过前端方式，往页面中添加一段 JS 代码，由 JS 自行扫描页面 DOM ，把文字汇总后传回自己的云服务器，再由于云服务器动态生成字体，返回字体的 URL。另一种是通过服务端语言，用户在服务端自己整理需生成的文字，再发送给云 API ，并拿到字体的 URL。
 
 国外主流的有，Steve Lee 的项目  [Fonts.com][14]，Adobe 的 [TypeKit][15]，还有 [Google Fonts][16]  等等。
 
-国内常见的有，[有字库][17]，阿里的免费服务 [iconfont][18]，台湾的 [JustFont][19] 等。
+国内常见的有，[有字库][17]，阿里的 [iconfont][18]，台湾的 [JustFont][19] 等。
 
 一些传统字体厂商也纷纷推出，[方正云字库][20]，[汉仪云字库][21]，[文鼎 iFontCloud][22]，[华康 DigiType][23] 等。
 
@@ -155,18 +149,18 @@ body { font-family: "自定义字体名"; }
 
 ### Web-Fonts 自建服务
 
-有两种原因，会产生不想用云服务的需求，一种是只用于固定的文字，不需要每次都动态生成（比如某个 Logo 文字），另一种可能是公司处于可控性考虑，不愿意把服务放在外面。
+有两种原因，可能会产生不想用云服务的需求，一种是只用于固定的文字，不需要每次都动态生成（比如某个 Logo 文字），另一种可能是公司处于可控性考虑，不愿意把服务放在外面。
 
 先说第一种，其实很简单，就是利用字体制作编辑软件，新建一个字体，然后打开另一个完整的字库文件，把需要的字复制过来，最后保存成 woff 文件。字体制作本身就是一个大领域，因此此类字体制作软件有很多，如商业工具有 [Glyphs][9]， [FontLab][24] ，[FontCreator][25]，开源的有 [FontForge][10] 等等。
 
-然后第二种，就涉及到自行实现 Web-Fonts 整体逻辑。2014 年，国内大牛 [@糖饼][26] 借助一系列开源项目（[css.js][27]、[jsdom][28]、[font-optimizer][29]、[ttf2eot][30]、[ttf2woff][31]、[ttf2svg][32]），实现了 Demo ，并以“[字蛛 font-spider][33]”项目开源发布，，感谢这些前浪们。
+然后第二种，就涉及到自行实现 Web-Fonts 整体逻辑。2014 年，国内大牛 [@糖饼][26] 借助[一系列开源项项目][35]实现了 Demo ，并以“[字蛛 font-spider][33]”项目开源发布，感谢这些前浪们。
 
 ![](http://imglf1.nosdn.127.net/img/MzVqS0VIeGlFdmxTbXFmN3ZPWm9JbXpPenBRN0MxZUx0NHl6bEk3TjQ3NGZGdDIvTzhhOEFRPT0.png)
 
 
 ## 四、图标字体 iconfont
 
-### 早期“字体图标鸡肋”与“web图标不足”
+### 早期“字体图标鸡肋”与“图片图标不足”
 
 初学 Word 时，都碰到过图像字体（如 Webdings、Wingdings），但现实中很少有人使用，因为这些字体只有 Windows 系统中有，在 doc 文件里玩玩还可以，像 Web 这种跨平台的文档里是肯定不会用的。
 
