--- a/_posts/2017-03-10-web_fonts.md
+++ b/_posts/2017-03-10-web_fonts.md
@@ -30,7 +30,7 @@ body { font-family: Arial, "Microsoft YaHei" }
 2. “中文”或“含空格的英文”要加引号（例：`"宋体", "Microsoft YaHei"`）  
 3. 用“字体名”代替“显示名”（例：用 `"Microsoft YaHei"` 代替 `"微软雅黑"`）  
 4. 用“Unicode码”代替“汉字”（例：`"\5FAE\8F6F\96C5\9ED1"` 代替 `"微软雅黑"`）  
-5. 使用系统自带的安全字体（例：即便设置 `文泉驿正黑` 多数人看到是默认的 `宋体`）
+5. 使用系统自带的安全字体（例：设置系统没有的 `毛泽东体` 多数人看到是 `宋体`）
 
 前2条，相信都没争议。
 
@@ -46,22 +46,22 @@ body { font-family: Arial, "Microsoft YaHei" }
 
 | 字体名称 | 特点 | 示例 |
 | - | - | - |
-| Arial | 无衬线，大写i与小写L难以区分 | <span style='font-size:20px;font-family:Arial'>Weiwei - iIlLoO01</span> |
-| Tahoma | 无衬线，可代替Arial | <span style='font-size:20px;font-family:Tahoma'>Weiwei - iIlLoO01</span> |
+| Arial | 无衬线，大写 i 与小写 L 难以区分 | <span style='font-size:20px;font-family:Arial'>Weiwei - iIlLoO01</span> |
+| Tahoma | 无衬线，可代替 Arial | <span style='font-size:20px;font-family:Tahoma'>Weiwei - iIlLoO01</span> |
 | Verdana | 无衬线，比 Tahoma 间距稍大 | <span style='font-size:20px;font-family:Verdana'>Weiwei - iIlLoO01</span> |
 | Georgia | 衬线，风格浑厚，数字尺寸不一 | <span style='font-size:20px;font-family:Georgia'>Weiwei - iIlLoO01</span> |
 | Times New Roman | 衬线，风格平滑，数字尺寸一致 | <span style='font-size:20px;font-family:"Times New Roman"'>Weiwei - iIlLoO01</span> |
 | Courier New | 等宽体，适合代码 | <span style='font-size:20px;font-family:"Courier New"'>Weiwei-iIlLoO01</span> |
 
 
-对于中文字体，[最佳实践][4]是用“相似字体”互相代替：
+对于中文字体，[最佳实践][4]是用“相似字体”互相代替（无论什么系统，下表每行至少有1个字体可以正确显示）：
 
 | Windows 简 | Mac OS X 简 | Windows 繁 | Mac OS X 繁 | 
 | - | - | - | - |
-| SimSun<br>宋体 | STSong<br>华文宋体 | MingLiU<br>細明體 | LiSong Pro<br>儷宋 Pro |
-| SimHei<br>黑体 | STHeiti<br>华文黑体 | Microsoft JhengHei<br>微軟正黑 | LiHei Pro<br>儷黑 Pro |
-| SimKai<br>楷体 | STKaiti<br>华文楷体 | DFKai-SB<br>標楷體 | BiauKai<br>標楷體 | 
-| Microsoft YaHei<br>微软雅黑 | Hiragino Sans GB<br>苹果丽黑 | Microsoft JhengHei<br>微軟正黑 | Hiragino Sans GB<br>冬青黑體簡 |
+| <span style='font-family:"SimSun"'>SimSun<br>宋体</span> | <span style='font-family:"STSong"'>STSong<br>华文宋体</span> | <span style='font-family:"MingLiU"'>MingLiU<br>細明體</span> | <span style='font-family:"LiSong Pro"'>LiSong Pro<br>儷宋 Pro</span> |
+| <span style='font-family:"SimHei"'>SimHei<br>黑体</span> | <span style='font-family:"STHeiti"'>STHeiti<br>华文黑体</span> | <span style='font-family:"Microsoft JhengHei"'>Microsoft JhengHei<br>微軟正黑</span> | <span style='font-family:"LiHei Pro"'>LiHei Pro<br>儷黑 Pro</span> |
+| <span style='font-family:"SimKai"'>SimKai<br>楷体</span> | <span style='font-family:"STKaiti"'>STKaiti<br>华文楷体</span> | <span style='font-family:"DFKai-SB"'>DFKai-SB<br>標楷體</span> | <span style='font-family:"BiauKai"'>BiauKai<br>標楷體</span> | 
+| <span style='font-family:"Microsoft YaHei"'>Microsoft YaHei<br>微软雅黑</span> | <span style='font-family:"Hiragino Sans GB"'>Hiragino Sans GB<br>苹果丽黑</span> | <span style='font-family:"Microsoft JhengHei"'>Microsoft JhengHei<br>微軟正黑</span> | <span style='font-family:"Hiragino Sans GB"'>Hiragino Sans GB<br>冬青黑體簡</span> |
 
 题外话：Hiragino Sans GB 由日本 JIYUKOBO Ltd. 和汉仪联合开发，是第一个符合 GB 18030 标准的日本出品字体，内含简繁全套汉字。在 Linux 系统常用的则是开源的[文泉驿系列][6]字体。
 
@@ -97,11 +97,11 @@ body { font-family: "自定义字体名"; }
 | SVG | .svg | IE 9+，FireFox 2+，Chrome 4+ |
 | WOFF | .woff | IE 9+，FireFox 3.6+，Chrome 5+ |
 
-于是在 Web 中常见的4种字体格式中，woff 体积最小除 IE8 外浏览器全都支持，因此一般只需使用 woff 格式即可，处女座可以考虑联合 eot、svg、ttf 一起使用。
+在 Web 中常见的4种字体格式中，woff 体积最小除 IE8 外浏览器全都支持，因此一般只需使用 woff 格式即可，处女座可以考虑联合 eot、svg、ttf 一起使用。
 
 ### 字体格式之间的转换
 
-实现字体格式转换的软件有很多（如：[gulp][36] 及下文提到的其他工具），最简单的是通过一个在线工具 [fontsquirrel.com][8] ，操作步骤见下图：
+ttf 格式常见，woff 格式上哪里找呢，还好格式可互相转换，转换工具有很多（如：[gulp][36] 及下文提到的其他专业字体软件），最简单的是通过一个在线工具 [fontsquirrel.com][8] ，操作步骤见下图：
 
 ![](http://imglf1.nosdn.127.net/img/MzVqS0VIeGlFdmxTbXFmN3ZPWm9Jcyt2ZWZUckI3RnJjbm5rd2V1VGM2N3VHTHV6T0hiYnNnPT0.png)
 
@@ -130,16 +130,16 @@ body { font-family: "自定义字体名"; }
 
 于是在 2010 年，一个叫 [Steve Lee][11]  的人想出了了一个称为 [Dynamic subsetting][13] 的解决方案，就是“[动态子集化][12]”技术，俗称 Web-Fonts 技术。
 
-简单点说，就是提前整理出一个页面中所有用到所有汉字，然后生成一个只包含这些汉字的字体文件，然后再通过 CSS 加载，这个叫“子集化”，动态子集化就是以上全部动态实现。
+简单点说，就是提前整理出一个页面中所有用到的汉字，然后生成一个只包含这些汉字的字体文件，然后再通过 CSS 加载，这个叫“子集化”，动态子集化就是以上全部动态实现。
 
 
 ### Web-Fonts 云服务
 
-相关云服务，一般有两种方式的 API ：
+动态子集化原理很简单，但实现起来还是比较繁琐的，而且对于中小型项目有点“大动干戈”，于是相关云服务就出现了，收费的免费的都有。
 
-一种是通过前端方式，往页面中添加一段 JS 代码，由 JS 自行扫描页面 DOM ，把文字汇总后传回自己的云服务器，再由于云服务器动态生成字体，返回字体的 URL。另一种是通过服务端语言，用户在服务端自己整理需生成的文字，再发送给云 API ，并拿到字体的 URL。
+云服务大体用法就是，往页面中添加一个云 JS 脚本，扫描页面 DOM 整理出文字传回云服务器，再由于云服务器动态生成字体，最后返回字体的 URL。一般除了 JS 版也提供其他语言SDK。
 
-国外主流的有，Steve Lee 的项目  [Fonts.com][14]，Adobe 的 [TypeKit][15]，还有 [Google Fonts][16]  等等。
+国外主流的有，SteveLee 的项目  [Fonts.com][14]，Adobe 的 [TypeKit][15]，还有 [Google Fonts][16]  等等。
 
 国内常见的有，[有字库][17]，阿里的 [iconfont][18]，台湾的 [JustFont][19] 等。
 
@@ -257,7 +257,7 @@ add_header Access-Control-Allow-Origin *;
 
 ## 结束语
 
-图标字体是否未来趋势还不好说，一种被称为 SVG-Sprite 的图标也很热门，详情参阅[这篇博文][49]，Github 还专门出了一套 SVG 图标（[见这里][50]）。
+图标字体是否未来趋势还不好说，一种被称为 SVG-Sprite 的图标也很热门，详情参阅[这篇博文][49]，Github 还专门出了一套 SVG-Sprite 图标（[见这里][50]）。
 
 参考文章过多，链接已全部引用到文中，这里就不单独列了。
 
