--- a/_posts/2017-03-10-web_fonts.md
+++ b/_posts/2017-03-10-web_fonts.md
@@ -58,12 +58,16 @@ body { font-family: Arial, "Microsoft YaHei" }
 
 | Windows 简 | Mac OS X 简 | Windows 繁 | Mac OS X 繁 | 
 | - | - | - | - |
-| <span style='font-family:"SimSun"'>SimSun<br>宋体</span> | <span style='font-family:"STSong"'>STSong<br>华文宋体</span> | <span style='font-family:"MingLiU"'>MingLiU<br>細明體</span> | <span style='font-family:"LiSong Pro"'>LiSong Pro<br>儷宋 Pro</span> |
-| <span style='font-family:"SimHei"'>SimHei<br>黑体</span> | <span style='font-family:"STHeiti"'>STHeiti<br>华文黑体</span> | <span style='font-family:"Microsoft JhengHei"'>Microsoft JhengHei<br>微軟正黑</span> | <span style='font-family:"LiHei Pro"'>LiHei Pro<br>儷黑 Pro</span> |
-| <span style='font-family:"SimKai"'>SimKai<br>楷体</span> | <span style='font-family:"STKaiti"'>STKaiti<br>华文楷体</span> | <span style='font-family:"DFKai-SB"'>DFKai-SB<br>標楷體</span> | <span style='font-family:"BiauKai"'>BiauKai<br>標楷體</span> | 
-| <span style='font-family:"Microsoft YaHei"'>Microsoft YaHei<br>微软雅黑</span> | <span style='font-family:"Hiragino Sans GB"'>Hiragino Sans GB<br>苹果丽黑</span> | <span style='font-family:"Microsoft JhengHei"'>Microsoft JhengHei<br>微軟正黑</span> | <span style='font-family:"Hiragino Sans GB"'>Hiragino Sans GB<br>冬青黑體簡</span> |
+| <span style='font-family:"SimSun"'>SimSun<br>宋体</span> | <span style='font-family:"STSong",simsun'>STSong<br>华文宋体</span> | <span style='font-family:"MingLiU",simsun'>MingLiU<br>細明體</span> | <span style='font-family:"LiSong Pro",simsun'>LiSong Pro<br>儷宋 Pro</span> |
+| <span style='font-family:"SimHei"'>SimHei<br>黑体</span> | <span style='font-family:"STHeiti",simsun'>STHeiti<br>华文黑体</span> | <span style='font-family:"Microsoft JhengHei",simsun'>Microsoft JhengHei<br>微軟正黑</span> | <span style='font-family:"LiHei Pro",simsun'>LiHei Pro<br>儷黑 Pro</span> |
+| <span style='font-family:"Kaiti,SimKai"'>Kaiti,SimKai<br>楷体</span> | <span style='font-family:"STKaiti",simsun'>STKaiti<br>华文楷体</span> | <span style='font-family:"DFKai-SB",simsun'>DFKai-SB<br>標楷體</span> | <span style='font-family:"BiauKai",simsun'>BiauKai<br>標楷體</span> | 
+| <span style='font-family:"Microsoft YaHei"'>Microsoft YaHei<br>微软雅黑</span> | <span style='font-family:"Hiragino Sans GB",simsun'>Hiragino Sans GB<br>苹果丽黑</span> | <span style='font-family:"Microsoft JhengHei",simsun'>Microsoft JhengHei<br>微軟正黑</span> | <span style='font-family:"Hiragino Sans GB",simsun'>Hiragino Sans GB<br>冬青黑體簡</span> |
 
-题外话：Hiragino Sans GB 由日本 JIYUKOBO Ltd. 和汉仪联合开发，是第一个符合 GB 18030 标准的日本出品字体，内含简繁全套汉字。在 Linux 系统常用的则是开源的[文泉驿系列][6]字体。
+> 注
+> (1) 简体 Windows 系统下的楷体，有2个英文名，原本只含 GB2312 时叫 simkai，但 vista 之后因包含了全套 GB18030 改叫 kaiti 了。
+> (2) Hiragino Sans GB 由日本 JIYUKOBO 和汉仪联合开发，是第一个符合 GB18030 标准的日本出品字体，内含简繁全套汉字。
+> (3) 在 Linux 系统，常用的则是开源的[文泉驿系列][6]字体。
+
 
 ## 二、在 Web 中使用自定义字体
 
