--- a/_posts/2017-03-10-web_fonts.md
+++ b/_posts/2017-03-10-web_fonts.md
@@ -63,8 +63,10 @@ body { font-family: Arial, "Microsoft YaHei" }
 | <span style='font-family:"KaiTi"'>KaiTi<br>楷体</span> | <span style='font-family:"STKaiti",simsun'>STKaiti<br>华文楷体</span> | <span style='font-family:"DFKai-SB",simsun'>DFKai-SB<br>標楷體</span> | <span style='font-family:"BiauKai",simsun'>BiauKai<br>標楷體</span> | 
 | <span style='font-family:"Microsoft YaHei"'>Microsoft YaHei<br>微软雅黑</span> | <span style='font-family:"Hiragino Sans GB",simsun'>Hiragino Sans GB<br>苹果丽黑</span> | <span style='font-family:"Microsoft JhengHei",simsun'>Microsoft JhengHei<br>微軟正黑</span> | <span style='font-family:"Hiragino Sans GB",simsun'>Hiragino Sans GB<br>冬青黑體</span> |
 
-注，Hiragino Sans GB 由日本 JIYUKOBO 和汉仪联合开发，是第一个符合 GB18030 标准的日本出品字体，内含简繁全套汉字。在 Linux 系统常用的则是开源的[文泉驿系列][6]字体。
-
+[注]  
+1、楷体 在 Windows XP 以及之前版本里英文名为 kaiti_GB2312。  
+2、Hiragino Sans GB 是日本 JIYUKOBO 与汉仪合作出品的 GB18030 字体，内含简繁全套汉字。  
+3、在 Linux 系统常用的则是开源的[文泉驿系列][6]字体。
 
 ## 二、在 Web 中使用自定义字体
 
